fixed the alignements for all the devices and added global scroll bar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,27 @@ body {
   background-color: #070724;
   color: #ffffff;
 }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #38384f;
+}
+
+::-webkit-scrollbar-thumb:vertical:hover {
+  height: 8px;
+  width: 6px;
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3.6px;
+  background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #070724;
+  width: 10px;
+}
